Update stytle tags

--- a/news/assets/css/style-3.9.css
+++ b/news/assets/css/style-3.9.css
@@ -1221,7 +1221,7 @@ img {
 }
 
 .home-slider-boxed-item .item-info .title a {
-    color: #fff;
+    color: #fff!important;
 }
 
 .home-slider-boxed-item .post-meta {
