--- a/news/assets/css/style-3.9.css
+++ b/news/assets/css/style-3.9.css
@@ -3099,7 +3099,7 @@ img {
     width: 100%;
     height: 50px;
     line-height: 42px;
-    padding: 0;
+    padding: 0!important;
     display: block;
     position: relative;
     color: #fff !important;
@@ -3107,9 +3107,11 @@ img {
     font-weight: 400;
     outline: 0 !important;
     box-shadow: none !important;
-    border-radius: .3rem;
-    text-align: left;
-    margin-bottom: 5px
+    border-radius: .3rem!important;
+    text-align: left!important;
+    margin-bottom: 5px!important;
+    padding-top:15px!important;
+    padding-left:15px!important
 }
 
 .btn-social i {
