--- a/news/themes/v1/css/sass/layout/_features.scss
+++ b/news/themes/v1/css/sass/layout/_features.scss
@@ -715,7 +715,7 @@
           &::before {
             opacity: 1;
           }
-          .inf__txt {
+          .mash__txt {
             opacity: 1;
             span,
             h3,
@@ -733,7 +733,7 @@
             object-fit: cover;
           }
         }
-        .inf__txt {
+        .mash__txt {
           position: absolute;
           bottom: 1.875rem;
           left: 1.563rem;
